improved tables (more ids)

--- a/event-models/pm/StudyRight/StudyRightBoardEnd.html
+++ b/event-models/pm/StudyRight/StudyRightBoardEnd.html
@@ -28,28 +28,28 @@
 		<div class='col text-center border'>17</div>
 		<div class='col text-center border'>r1</div>
 		<div class='col text-center border'><a href='#r2'>r2</a> <a href='#r5'>r5</a> </div>
-		<div class='col text-center border'><a href='#stop1'>stop1</a> <a href='#s2'>s2</a> <a href='#s3'>s3</a> <a href='#s4'>s4</a> <a href='#s5'>s5</a> </div>
+		<div class='col text-center border'><a href='#stop1'>stop1</a> <a href='#stop4'>stop4</a> <a href='#stop9'>stop9</a> <a href='#stop11'>stop11</a> <a href='#stop13'>stop13</a> </div>
 		<div class='col text-center border'>math</div>
 	</div>
 	<div class='row justify-content-center' id='r2'>
 		<div class='col text-center border'>20</div>
 		<div class='col text-center border'>r2</div>
 		<div class='col text-center border'><a href='#r1'>r1</a> <a href='#r5'>r5</a> </div>
-		<div class='col text-center border'><a href='#s'>s</a> <a href='#s6'>s6</a> <a href='#s7'>s7</a> <a href='#s8'>s8</a> </div>
+		<div class='col text-center border'><a href='#stop2'>stop2</a> <a href='#stop5'>stop5</a> <a href='#stop10'>stop10</a> <a href='#stop15'>stop15</a> </div>
 		<div class='col text-center border'>calculus</div>
 	</div>
 	<div class='row justify-content-center' id='r4'>
 		<div class='col text-center border'>0</div>
 		<div class='col text-center border'>r4</div>
 		<div class='col text-center border'><a href='#r5'>r5</a> </div>
-		<div class='col text-center border'><a href='#s9'>s9</a> <a href='#s10'>s10</a> <a href='#s11'>s11</a> <a href='#s12'>s12</a> </div>
+		<div class='col text-center border'><a href='#stop6'>stop6</a> <a href='#stop8'>stop8</a> <a href='#stop14'>stop14</a> <a href='#stop17'>stop17</a> </div>
 		<div class='col text-center border'>exam</div>
 	</div>
 	<div class='row justify-content-center' id='r5'>
 		<div class='col text-center border'>29</div>
 		<div class='col text-center border'>r5</div>
 		<div class='col text-center border'><a href='#r1'>r1</a> <a href='#r2'>r2</a> <a href='#r4'>r4</a> </div>
-		<div class='col text-center border'><a href='#s1'>s1</a> <a href='#s13'>s13</a> <a href='#s14'>s14</a> <a href='#s15'>s15</a> </div>
+		<div class='col text-center border'><a href='#stop3'>stop3</a> <a href='#stop7'>stop7</a> <a href='#stop12'>stop12</a> <a href='#stop16'>stop16</a> </div>
 		<div class='col text-center border'>modeling</div>
 	</div>
 	<br>
@@ -68,136 +68,136 @@
 	<div class='row justify-content-center' id='stop1'>
 		<div class='col text-center border'>stop1</div>
 		<div class='col text-center border'>66</div>
-		<div class='col text-center border'><a href='#s'>s</a> <a href='#s1'>s1</a> </div>
+		<div class='col text-center border'><a href='#stop2'>stop2</a> <a href='#stop3'>stop3</a> </div>
 		<div class='col text-center border'>N/A</div>
 		<div class='col text-center border'><a href='#r1'>r1</a> </div>
 		<div class='col text-center border'><a href='#carli'>carli</a> </div>
 	</div>
-	<div class='row justify-content-center' id='s'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop2'>
+		<div class='col text-center border'>stop2</div>
 		<div class='col text-center border'>46</div>
-		<div class='col text-center border'><a href='#s4'>s4</a> <a href='#s14'>s14</a> </div>
+		<div class='col text-center border'><a href='#stop11'>stop11</a> <a href='#stop12'>stop12</a> </div>
 		<div class='col text-center border'><a href='#stop1'>stop1</a> </div>
 		<div class='col text-center border'><a href='#r2'>r2</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s1'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop3'>
+		<div class='col text-center border'>stop3</div>
 		<div class='col text-center border'>37</div>
-		<div class='col text-center border'><a href='#s2'>s2</a> <a href='#s6'>s6</a> <a href='#s9'>s9</a> </div>
+		<div class='col text-center border'><a href='#stop4'>stop4</a> <a href='#stop5'>stop5</a> <a href='#stop6'>stop6</a> </div>
 		<div class='col text-center border'><a href='#stop1'>stop1</a> </div>
 		<div class='col text-center border'><a href='#r5'>r5</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s2'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop4'>
+		<div class='col text-center border'>stop4</div>
 		<div class='col text-center border'>20</div>
-		<div class='col text-center border'><a href='#s7'>s7</a> </div>
-		<div class='col text-center border'><a href='#s1'>s1</a> </div>
+		<div class='col text-center border'><a href='#stop10'>stop10</a> </div>
+		<div class='col text-center border'><a href='#stop3'>stop3</a> </div>
 		<div class='col text-center border'><a href='#r1'>r1</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s3'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop9'>
+		<div class='col text-center border'>stop9</div>
 		<div class='col text-center border'>0</div>
 		<div class='col text-center border'></div>
-		<div class='col text-center border'><a href='#s6'>s6</a> </div>
+		<div class='col text-center border'><a href='#stop5'>stop5</a> </div>
 		<div class='col text-center border'><a href='#r1'>r1</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s4'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop11'>
+		<div class='col text-center border'>stop11</div>
 		<div class='col text-center border'>29</div>
-		<div class='col text-center border'><a href='#s8'>s8</a> <a href='#s15'>s15</a> </div>
-		<div class='col text-center border'><a href='#s'>s</a> </div>
+		<div class='col text-center border'><a href='#stop15'>stop15</a> <a href='#stop16'>stop16</a> </div>
+		<div class='col text-center border'><a href='#stop2'>stop2</a> </div>
 		<div class='col text-center border'><a href='#r1'>r1</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s5'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop13'>
+		<div class='col text-center border'>stop13</div>
 		<div class='col text-center border'>0</div>
 		<div class='col text-center border'></div>
-		<div class='col text-center border'><a href='#s14'>s14</a> </div>
+		<div class='col text-center border'><a href='#stop12'>stop12</a> </div>
 		<div class='col text-center border'><a href='#r1'>r1</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s6'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop5'>
+		<div class='col text-center border'>stop5</div>
 		<div class='col text-center border'>17</div>
-		<div class='col text-center border'><a href='#s3'>s3</a> </div>
-		<div class='col text-center border'><a href='#s1'>s1</a> </div>
+		<div class='col text-center border'><a href='#stop9'>stop9</a> </div>
+		<div class='col text-center border'><a href='#stop3'>stop3</a> </div>
 		<div class='col text-center border'><a href='#r2'>r2</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s7'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop10'>
+		<div class='col text-center border'>stop10</div>
 		<div class='col text-center border'>0</div>
 		<div class='col text-center border'></div>
-		<div class='col text-center border'><a href='#s2'>s2</a> </div>
+		<div class='col text-center border'><a href='#stop4'>stop4</a> </div>
 		<div class='col text-center border'><a href='#r2'>r2</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s8'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop15'>
+		<div class='col text-center border'>stop15</div>
 		<div class='col text-center border'>9</div>
 		<div class='col text-center border'></div>
-		<div class='col text-center border'><a href='#s4'>s4</a> </div>
+		<div class='col text-center border'><a href='#stop11'>stop11</a> </div>
 		<div class='col text-center border'><a href='#r2'>r2</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s9'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop6'>
+		<div class='col text-center border'>stop6</div>
 		<div class='col text-center border'>37</div>
-		<div class='col text-center border'><a href='#s13'>s13</a> </div>
-		<div class='col text-center border'><a href='#s1'>s1</a> </div>
+		<div class='col text-center border'><a href='#stop7'>stop7</a> </div>
+		<div class='col text-center border'><a href='#stop3'>stop3</a> </div>
 		<div class='col text-center border'><a href='#r4'>r4</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s10'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop8'>
+		<div class='col text-center border'>stop8</div>
 		<div class='col text-center border'>8</div>
 		<div class='col text-center border'></div>
-		<div class='col text-center border'><a href='#s13'>s13</a> </div>
+		<div class='col text-center border'><a href='#stop7'>stop7</a> </div>
 		<div class='col text-center border'><a href='#r4'>r4</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s11'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop14'>
+		<div class='col text-center border'>stop14</div>
 		<div class='col text-center border'>17</div>
 		<div class='col text-center border'></div>
-		<div class='col text-center border'><a href='#s14'>s14</a> </div>
+		<div class='col text-center border'><a href='#stop12'>stop12</a> </div>
 		<div class='col text-center border'><a href='#r4'>r4</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s12'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop17'>
+		<div class='col text-center border'>stop17</div>
 		<div class='col text-center border'>0</div>
 		<div class='col text-center border'></div>
-		<div class='col text-center border'><a href='#s15'>s15</a> </div>
+		<div class='col text-center border'><a href='#stop16'>stop16</a> </div>
 		<div class='col text-center border'><a href='#r4'>r4</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s13'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop7'>
+		<div class='col text-center border'>stop7</div>
 		<div class='col text-center border'>8</div>
-		<div class='col text-center border'><a href='#s10'>s10</a> </div>
-		<div class='col text-center border'><a href='#s9'>s9</a> </div>
+		<div class='col text-center border'><a href='#stop8'>stop8</a> </div>
+		<div class='col text-center border'><a href='#stop6'>stop6</a> </div>
 		<div class='col text-center border'><a href='#r5'>r5</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s14'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop12'>
+		<div class='col text-center border'>stop12</div>
 		<div class='col text-center border'>17</div>
-		<div class='col text-center border'><a href='#s5'>s5</a> <a href='#s11'>s11</a> </div>
-		<div class='col text-center border'><a href='#s'>s</a> </div>
+		<div class='col text-center border'><a href='#stop13'>stop13</a> <a href='#stop14'>stop14</a> </div>
+		<div class='col text-center border'><a href='#stop2'>stop2</a> </div>
 		<div class='col text-center border'><a href='#r5'>r5</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
-	<div class='row justify-content-center' id='s15'>
-		<div class='col text-center border'>N/A</div>
+	<div class='row justify-content-center' id='stop16'>
+		<div class='col text-center border'>stop16</div>
 		<div class='col text-center border'>0</div>
-		<div class='col text-center border'><a href='#s12'>s12</a> </div>
-		<div class='col text-center border'><a href='#s4'>s4</a> </div>
+		<div class='col text-center border'><a href='#stop17'>stop17</a> </div>
+		<div class='col text-center border'><a href='#stop11'>stop11</a> </div>
 		<div class='col text-center border'><a href='#r5'>r5</a> </div>
 		<div class='col text-center border'>N/A</div>
 	</div>
