--- a/event-models/pm/StudyRight/StudyRightEventStorming.html
+++ b/event-models/pm/StudyRight/StudyRightEventStorming.html
@@ -7,7 +7,7 @@
         <div id="showworking<br>smoothly">
             <div id="working smoothly" class="lane">
 
-                <a href="studyRight12_00.svg" target="objectDiagram">
+                <a href="StudyRightBoardStart.svg" target="objectDiagram">
                     <div class="box user">
                         <div class="center"><i class="fa fa-user"></i></div>
                         <div>start situation</div>
@@ -57,7 +57,7 @@
 
                 </div>
 
-                <a href="studyRight12_12.svg" target="objectDiagram">
+                <a href="StudyRightBoardEnd.svg" target="objectDiagram">
                     <div class="box command">
                         <div>command: findRoute</div>
                         <div>student: karli</div>
@@ -85,7 +85,7 @@
             </div>
         </div>
     </div>
-    <iframe name="objectDiagram" width="100%" height="1000px" src="studyRight12_00.svg">
+    <iframe name="objectDiagram" width="100%" height="1000px" src="StudyRightBoardStart.svg">
 
     </iframe>
 </body>
