--- a/src/main/resources/test-htmls/test-board.html
+++ b/src/main/resources/test-htmls/test-board.html
@@ -5,7 +5,7 @@
     <title>Board</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <style>
         .box {
             border-radius: 4px;
@@ -14,8 +14,62 @@
     </style>
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <span class="bi bi-diagram-3" style="font-size: 5em"></span>
+            <span>Bumserino</span>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: orange">
+                <span>aasfad</span> <br>
+                <span>aas</span> <br>
+                <span>aas   asd</span> <br>
+                <span>aasfadadsa d </span> <br>
+                <span>aasfadasd</span> <br>
+                <span>aasfadasd</span> <br>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: orange">
+                <span>aasfad</span> <br>
+                <span>aas</span> <br>
+                <span>aas   asd</span> <br>
+                <span>aasfadadsa d </span> <br>
+                <span>aasfadasd</span> <br>
+                <span>aasfadasd</span> <br>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: orange">
+                <span>aasfad</span> <br>
+                <span>aas</span> <br>
+                <span>aas   asd</span> <br>
+                <span>aasfadadsa d </span> <br>
+                <span>aasfadasd</span> <br>
+                <span>aasfadasd</span> <br>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: orange">
+                <span>aasfad</span> <br>
+                <span>aas</span> <br>
+                <span>aas   asd</span> <br>
+                <span>aasfadadsa d </span> <br>
+                <span>aasfadasd</span> <br>
+                <span>aasfadasd</span> <br>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: orange">
+                <span>aasfad</span> <br>
+                <span>aas</span> <br>
+                <span>aas   asd</span> <br>
+                <span>aasfadadsa d </span> <br>
+                <span>aasfadasd</span> <br>
+                <span>aasfadasd</span> <br>
+            </div>
+        </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
             <div class="box" style="background-color: orange">
                 <span>aasfad</span> <br>
