WIP start on page change from clicking a note

--- a/src/main/resources/test-htmls/test-board.html
+++ b/src/main/resources/test-htmls/test-board.html
@@ -21,7 +21,7 @@
             <span>Bumserino</span>
         </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
-            <div class="box" style="background-color: orange">
+            <div class="box" style="background-color: orange" onclick="parent.setPageFromIframe(2)">
                 <span>aasfad</span> <br>
                 <span>aas</span> <br>
                 <span>aas   asd</span> <br>
