new colors, new notes, new schema

--- a/src/main/resources/test-htmls/test-board.html
+++ b/src/main/resources/test-htmls/test-board.html
@@ -22,62 +22,52 @@
         </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
             <div class="box" style="background-color: orange" onclick="parent.setPageFromIframe(2)">
-                <span>aasfad</span> <br>
-                <span>aas</span> <br>
-                <span>aas   asd</span> <br>
-                <span>aasfadadsa d </span> <br>
-                <span>aasfadasd</span> <br>
-                <span>aasfadasd</span> <br>
+                <h3>Event</h3>
             </div>
         </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
-            <div class="box" style="background-color: orange">
-                <span>aasfad</span> <br>
-                <span>aas</span> <br>
-                <span>aas   asd</span> <br>
-                <span>aasfadadsa d </span> <br>
-                <span>aasfadasd</span> <br>
-                <span>aasfadasd</span> <br>
+            <div class="box" style="background-color: pink">
+                <h3>External System</h3>
             </div>
         </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
-            <div class="box" style="background-color: orange">
-                <span>aasfad</span> <br>
-                <span>aas</span> <br>
-                <span>aas   asd</span> <br>
-                <span>aasfadadsa d </span> <br>
-                <span>aasfadasd</span> <br>
-                <span>aasfadasd</span> <br>
+            <div class="box" style="background-color: lightskyblue">
+                <h3>Command</h3>
             </div>
         </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
-            <div class="box" style="background-color: orange">
-                <span>aasfad</span> <br>
-                <span>aas</span> <br>
-                <span>aas   asd</span> <br>
-                <span>aasfadadsa d </span> <br>
-                <span>aasfadasd</span> <br>
-                <span>aasfadasd</span> <br>
+            <div class="box" style="background-color: gold">
+                <h3>User</h3>
             </div>
         </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
-            <div class="box" style="background-color: orange">
-                <span>aasfad</span> <br>
-                <span>aas</span> <br>
-                <span>aas   asd</span> <br>
-                <span>aasfadadsa d </span> <br>
-                <span>aasfadasd</span> <br>
-                <span>aasfadasd</span> <br>
+            <div class="box" style="background-color: darkseagreen">
+                <h3>Data</h3>
             </div>
         </div>
         <div class="col-lg-2 col-md-3 col-xs-6">
-            <div class="box" style="background-color: orange">
-                <span>aasfad</span> <br>
-                <span>aas</span> <br>
-                <span>aas   asd</span> <br>
-                <span>aasfadadsa d </span> <br>
-                <span>aasfadasd</span> <br>
-                <span>aasfadasd</span> <br>
+            <div class="box" style="background-color: #C8A2C8">
+                <h3>Policy</h3>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: palegreen">
+                <h3>Page</h3>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: indianred">
+                <h3>Problem</h3>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: palevioletred">
+                <h3>Service</h3>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-xs-6">
+            <div class="box" style="background-color: lightsteelblue">
+                <h3>Class</h3>
             </div>
         </div>
     </div>
